--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="todaysHabitsTitleText">Today\'s Habits</string>
     <string name="goToTodaysHabitsButtonText">Today\'s Habits</string>
     <string name="goToAllAddHabitsButtonText">All/Add Habits</string>
+    <string name="title_activity_all_add_habits">AllAddHabitsActivity</string>
 </resources>
