--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,20 @@
 <resources>
     <string name="app_name">HabitTracker</string>
-    <string name="addHabitButtonText">Add</string>
-    <string name="allAddHabitsTitleText">All/Add Habits</string>
+    <string name="allHabitsTitleText">All Habits</string>
     <string name="todaysHabitsTitleText">Today\'s Habits</string>
     <string name="goToTodaysHabitsButtonText">Today\'s Habits</string>
-    <string name="goToAllAddHabitsButtonText">All/Add Habits</string>
-    <string name="title_activity_all_add_habits">AllAddHabitsActivity</string>
+    <string name="goToAllHabitsButtonText">All Habits</string>
+    <string name="title_activity_all_habits">AllHabitsActivity</string>
+    <string name="title_activity_add_habit">AddHabitActivity</string>
+    <string name="addHabitsTitleText">Add Habit</string>
+    <string name="namePromptText">Habit Name:</string>
+    <string name="startDatePrompt">Start Date (Default Today):</string>
+    <string name="daysOfWeekPrompt">Choose Day(s) of Week to do Habit (At Least One)</string>
+    <string name="monday">Monday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="friday">Friday</string>
+    <string name="sunday">Sunday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="saturday">Saturday</string>
 </resources>
