--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="tuesday">Tuesday</string>
     <string name="thursday">Thursday</string>
     <string name="saturday">Saturday</string>
+    <string name="removeDialogTitle">Completions (Click on any you wish to remove)</string>
+    <string name="deleteHabitButton">Delete Habit</string>
+    <string name="cancelButton">Cancel</string>
 </resources>
